tests/snapshots/run_wpt_conformance__onnx_greaterOrEqual_float16_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "greater_or_equal.https.any.js",
    "greaterOrEqual float16 0D scalar",
    "onnx",
    "PASS",
)
